# aqi-forecasting-prototype

./: .dockerignore  .gitignore  AUTHORS.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  MODEL_CARD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: api.py
dashboard/: streamlit_app.py
data/: README.md  dataset_sources.json  sample_aqi_dataset.csv
docs/: ARTIFACT_RELEASES.md  WEATHER_INPUTS.md
models/: README.md
notebooks/: AQI_FORECASTING.ipynb
reports/: README.md
scripts/: download_dataset.py  evaluate.py  evaluate_baselines.py  generate_sample_data.py  predict.py  run_dashboard.py  train.py  train_classifier.py  train_tree.py  walk_forward.py
src/aqi_forecasting/: __init__.py  aqi.py  baselines.py  categories.py  classify.py  config.py  data.py  evaluate.py  evaluate_baselines.py  features.py  metrics.py  model.py  predict.py  sources.py  train.py  train_tree.py  tree_model.py  walk_forward.py
tests/: test_aqi.py  test_aqi_logic.py  test_categories_baselines.py  test_classify.py  test_data.py  test_features.py  test_sources.py  test_walk_forward.py
