[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqi-forecasting-model"
version = "0.1.0"
description = "Reusable AQI forecasting pipeline with preprocessing, LSTM training, evaluation, prediction, and FastAPI serving."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Subhrakant Sethi" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scipy>=1.11",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
lstm = ["tensorflow>=2.15"]
tuning = ["keras-tuner>=1.4", "pmdarima>=2.0", "shap>=0.45"]
tree = ["xgboost>=2.0", "lightgbm>=4.0"]
dashboard = ["streamlit>=1.34"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
